--- a/Makefile.in
+++ b/Makefile.in
@@ -1,10 +1,13 @@
 prefix = $(DESTDIR)@prefix@
 srcdir = @srcdir@
 INSTALL = @INSTALL@
+distro = "gentoo"
 
-install: all
-	mkdir -p ${prefix}/etc/{conf.d,init.d}/
-	mkdir -p ${prefix}/usr/bin/
-	${INSTALL} ${srcdir}/libvirtwol ${prefix}/usr/bin/
-	${INSTALL} ${srcdir}/gentoo/init.d/libvirt-wakeonlan ${prefix}/etc/{init.d}/
-	${INSTALL} ${srcdir}/gentoo/conf.d/libvirt-wakeonlan ${prefix}/etc/{conf.d}/
+all: libvirtwol
+
+install: all 
+	mkdir -p ${prefix}/sbin/
+	${INSTALL} ${srcdir}/libvirtwol ${prefix}/sbin/
+	mkdir -p $(DESTDIR)/etc/{init.d,conf.d}
+	${INSTALL} ${srcdir}/${distro}/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan
+	${INSTALL} ${srcdir}/${distro}/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan
