--- a/Makefile.in
+++ b/Makefile.in
@@ -1,7 +1,6 @@
 prefix = $(DESTDIR)@prefix@
 srcdir = @srcdir@
 INSTALL = @INSTALL@
-distro = "gentoo"
 
 all: libvirtwol
 
@@ -9,5 +8,21 @@ install: all
 	mkdir -p ${prefix}/sbin/
 	${INSTALL} ${srcdir}/libvirtwol ${prefix}/sbin/
 	mkdir -p $(DESTDIR)/etc/{init.d,conf.d}
-	${INSTALL} ${srcdir}/${distro}/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan
-	${INSTALL} ${srcdir}/${distro}/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan
+	
+	# gentoo
+	if [ -f /etc/gentoo-release ] ; then \
+                  ${INSTALL} ${srcdir}/gentoo/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/gentoo/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
+        fi
+
+        # redhat
+	if [ -f /etc/redhat-release ] ; then \
+                  ${INSTALL} ${srcdir}/redhat/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/redhat/sysconfig/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
+        fi
+
+        # debian
+	if [ -f /etc/debian-release ] ; then \
+                  ${INSTALL} ${srcdir}/debian/rc.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
+        fi
