--- a/Makefile.in
+++ b/Makefile.in
@@ -7,22 +7,31 @@ all: libvirtwol
 install: all 
 	mkdir -p ${prefix}/sbin/
 	${INSTALL} ${srcdir}/libvirtwol ${prefix}/sbin/
-	mkdir -p $(DESTDIR)/etc/{init.d,conf.d}
 	
 	# gentoo
 	if [ -f /etc/gentoo-release ] ; then \
-                  ${INSTALL} ${srcdir}/gentoo/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
+                  mkdir -p $(DESTDIR)/etc/{init.d,conf.d}; \
+                  ${INSTALL} ${srcdir}/packages/gentoo/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
                   ${INSTALL} ${srcdir}/gentoo/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
         fi
 
         # redhat
 	if [ -f /etc/redhat-release ] ; then \
-                  ${INSTALL} ${srcdir}/redhat/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
-                  ${INSTALL} ${srcdir}/redhat/sysconfig/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
+                  mkdir -p $(DESTDIR)/etc/{init.d,sysconfig}; \
+                  ${INSTALL} ${srcdir}/packages/redhat/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/packages/redhat/sysconfig/libvirt-wakeonlan ${DESTDIR}/etc/sysconfig/libvirt-wakeonlan; \
         fi
 
         # debian
 	if [ -f /etc/debian-release ] ; then \
-                  ${INSTALL} ${srcdir}/debian/rc.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
-                  ${INSTALL} ${srcdir}/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
+                  mkdir -p $(DESTDIR)/etc/{rc.d,default}; \
+                  ${INSTALL} ${srcdir}/packages/debian/rc.d/libvirt-wakeonlan ${DESTDIR}/etc/rc.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/packages/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/default/libvirt-wakeonlan; \
+        fi
+
+        # arch
+	if [ -f /etc/arch-release ] ; then \
+                  mkdir -p ${prefix}/lib/systemd/system $(DESTDIR)/etc; \
+                  ${INSTALL} ${srcdir}/packages/arch/systemd/system/libvirt-wakeonlan.service ${prefix}/lib/systemd/system/libvirt-wakeonlan.service; \
+                  ${INSTALL} ${srcdir}/packages/arch/systemd/libvirt-wakeonlan.conf ${DESTDIR}/etc/systemd/libvirt-wakeonlan.conf; \
         fi
