--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ install: all
 	if [ -f /etc/gentoo-release ] ; then \
                   mkdir -p $(DESTDIR)/etc/{init.d,conf.d}; \
                   ${INSTALL} ${srcdir}/packages/gentoo/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
-                  ${INSTALL} ${srcdir}/gentoo/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/packages/gentoo/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
         fi
 
         # redhat
