Moved init scripts into init dir

--- a/Makefile.in
+++ b/Makefile.in
@@ -11,27 +11,27 @@ install: all
 	# gentoo
 	if [ -f /etc/gentoo-release ] ; then \
                   mkdir -p $(DESTDIR)/etc/{init.d,conf.d}; \
-                  ${INSTALL} ${srcdir}/packages/gentoo/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
-                  ${INSTALL} ${srcdir}/packages/gentoo/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/init/gentoo/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/init/gentoo/conf.d/libvirt-wakeonlan ${DESTDIR}/etc/conf.d/libvirt-wakeonlan; \
         fi
 
         # redhat
 	if [ -f /etc/redhat-release ] ; then \
                   mkdir -p $(DESTDIR)/etc/{init.d,sysconfig}; \
-                  ${INSTALL} ${srcdir}/packages/redhat/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
-                  ${INSTALL} ${srcdir}/packages/redhat/sysconfig/libvirt-wakeonlan ${DESTDIR}/etc/sysconfig/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/init/redhat/init.d/libvirt-wakeonlan ${DESTDIR}/etc/init.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/init/redhat/sysconfig/libvirt-wakeonlan ${DESTDIR}/etc/sysconfig/libvirt-wakeonlan; \
         fi
 
         # debian
 	if [ -f /etc/debian-release ] ; then \
                   mkdir -p $(DESTDIR)/etc/{rc.d,default}; \
-                  ${INSTALL} ${srcdir}/packages/debian/rc.d/libvirt-wakeonlan ${DESTDIR}/etc/rc.d/libvirt-wakeonlan; \
-                  ${INSTALL} ${srcdir}/packages/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/default/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/init/debian/rc.d/libvirt-wakeonlan ${DESTDIR}/etc/rc.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/init/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/default/libvirt-wakeonlan; \
         fi
 
         # arch
 	if [ -f /etc/arch-release ] ; then \
                   mkdir -p ${prefix}/lib/systemd/system $(DESTDIR)/etc; \
-                  ${INSTALL} ${srcdir}/packages/arch/systemd/system/libvirt-wakeonlan.service ${prefix}/lib/systemd/system/libvirt-wakeonlan.service; \
-                  ${INSTALL} ${srcdir}/packages/arch/systemd/libvirt-wakeonlan.conf ${DESTDIR}/etc/systemd/libvirt-wakeonlan.conf; \
+                  ${INSTALL} ${srcdir}/init/arch/systemd/system/libvirt-wakeonlan.service ${prefix}/lib/systemd/system/libvirt-wakeonlan.service; \
+                  ${INSTALL} ${srcdir}/init/arch/systemd/libvirt-wakeonlan.conf ${DESTDIR}/etc/systemd/libvirt-wakeonlan.conf; \
         fi
