--- a/Makefile.in
+++ b/Makefile.in
@@ -23,9 +23,9 @@ install: all
         fi
 
         # debian
-	if [ -f /etc/debian-release ] ; then \
+	if [ -f /etc/debian-release || -f /etc/debian_version ] ; then \
                   mkdir -p $(DESTDIR)/etc/{rc.d,default}; \
-                  ${INSTALL} ${srcdir}/init/debian/rc.d/libvirt-wakeonlan ${DESTDIR}/etc/rc.d/libvirt-wakeonlan; \
+                  ${INSTALL} ${srcdir}/init/debian/init/libvirt-wakeonlan ${DESTDIR}/etc/init/libvirt-wakeonlan; \
                   ${INSTALL} ${srcdir}/init/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/default/libvirt-wakeonlan; \
         fi
 
