--- a/Makefile.in
+++ b/Makefile.in
@@ -24,7 +24,7 @@ install: all
         fi
 
         # debian
-	if [ -f /etc/debian-release || -f /etc/debian_version ] ; then \
+	if [ -f /etc/debian_version ] ; then \
                   mkdir -p $(DESTDIR)/etc/{rc.d,default}; \
                   ${INSTALL} ${srcdir}/init/debian/init/libvirt-wakeonlan.conf ${DESTDIR}/etc/init/libvirt-wakeonlan.conf; \
                   ${INSTALL} ${srcdir}/init/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/default/libvirt-wakeonlan; \
