--- a/Makefile.in
+++ b/Makefile.in
@@ -25,7 +25,7 @@ install: all
 
         # debian
 	if [ -f /etc/debian_version ] ; then \
-                  mkdir -p $(DESTDIR)/etc/{rc.d,default}; \
+                  mkdir -p $(DESTDIR)/etc/{init,default}; \
                   ${INSTALL} ${srcdir}/init/debian/init/libvirt-wakeonlan.conf ${DESTDIR}/etc/init/libvirt-wakeonlan.conf; \
                   ${INSTALL} ${srcdir}/init/debian/default/libvirt-wakeonlan ${DESTDIR}/etc/default/libvirt-wakeonlan; \
         fi
