Remove curly-braced makedir

--- a/Makefile.in
+++ b/Makefile.in
@@ -11,21 +11,21 @@ install: all
 	
 	# gentoo
 	if [ -f /etc/gentoo-release ] ; then \
-                  mkdir -p $(DESTDIR)/etc/{init.d,conf.d}; \
+                  mkdir -p $(DESTDIR)/etc/init.d $(DESTDIR)/etc/conf.d; \
                   ${INSTALL} ${srcdir}/init/gentoo/init.d/libvirt-wakeonlan $(DESTDIR)/etc/init.d/libvirt-wakeonlan; \
                   ${INSTALL} ${srcdir}/init/gentoo/conf.d/libvirt-wakeonlan $(DESTDIR)/etc/conf.d/libvirt-wakeonlan; \
         fi
 
         # redhat
 	if [ -f /etc/redhat-release ] ; then \
-                  mkdir -p $(DESTDIR)/etc/{init.d,sysconfig}; \
+                  mkdir -p $(DESTDIR)/etc/init.d $(DESTDIR)/etc/sysconfig; \
                   ${INSTALL} ${srcdir}/init/redhat/init.d/libvirt-wakeonlan $(DESTDIR)/etc/init.d/libvirt-wakeonlan; \
                   ${INSTALL} ${srcdir}/init/redhat/sysconfig/libvirt-wakeonlan $(DESTDIR)/etc/sysconfig/libvirt-wakeonlan; \
         fi
 
         # debian
 	if [ -f /etc/debian_version ] ; then \
-                  mkdir -p $(DESTDIR)/etc/{init,default}; \
+                  mkdir -p $(DESTDIR)/etc/init $(DESTDIR)/etc/default; \
                   find $(DESTDIR) -type d; \
                   ${INSTALL} ${srcdir}/init/debian/init/libvirt-wakeonlan.conf $(DESTDIR)/etc/init/libvirt-wakeonlan.conf; \
                   ${INSTALL} ${srcdir}/init/debian/default/libvirt-wakeonlan $(DESTDIR)/etc/default/libvirt-wakeonlan; \
