--- a/init/debian/init/libvirt-wakeonlan.conf
+++ b/init/debian/init/libvirt-wakeonlan.conf
@@ -4,10 +4,10 @@ description "Starts KVM instances from wake on lan packets"
 author "Simon Cadman <src@niftiestsoftware.com>"
 
 # When to start the service
-start on starting libvirt
+start on starting libvirt-bin
 
 # When to stop the service
-start on stopping libvirt
+start on stopping libvirt-bin
 
 # Automatically restart process if crashed
 respawn
