--- a/init/arch/systemd/system/libvirt-wakeonlan.service
+++ b/init/arch/systemd/system/libvirt-wakeonlan.service
@@ -2,8 +2,8 @@
 Description=Starts KVM instances from wake on lan packets
 
 [Service]
-ExecStartPre=cd /usr/share/libvirt-wakeonlan
-ExecStart=./libvirtwol.py $LIBVIRTDWOL_INTERFACE
+WorkingDirectory=/usr/share/libvirt-wakeonlan
+ExecStart=/usr/share/libvirt-wakeonlan/libvirtwol.py $LIBVIRTDWOL_INTERFACE
 Type=simple
 
 [Unit]
