Include variables correctly into ubuntu init script

--- a/init/debian/init/libvirt-wakeonlan.conf
+++ b/init/debian/init/libvirt-wakeonlan.conf
@@ -15,4 +15,7 @@ respawn
 chdir /usr/share/libvirt-wakeonlan/
 
 # Start the process
-exec ./libvirtwol.py
+script
+        . /etc/default/libvirt-wakeonlan
+        exec ./libvirtwol.py $LIBVIRTDWOL_INTERFACE
+end script
