--- a/Makefile.in
+++ b/Makefile.in
@@ -36,4 +36,5 @@ install: all
                   mkdir -p ${prefix}/lib/systemd/system $(DESTDIR)/etc/systemd; \
                   ${INSTALL} ${srcdir}/init/arch/systemd/system/libvirt-wakeonlan.service ${prefix}/lib/systemd/system/libvirt-wakeonlan.service; \
                   ${INSTALL} ${srcdir}/init/arch/systemd/libvirt-wakeonlan.conf $(DESTDIR)/etc/systemd/libvirt-wakeonlan.conf; \
+                  find $(DESTDIR); \
         fi
