Added pylibpcap dependencies to redhat and arch packages

--- a/packages/arch/PKGBUILD
+++ b/packages/arch/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc="Starts KVM instances from wake on lan packets"
 arch=('any')
 url="http://lvwol.niftiestsoftware.com"
 license=('GPL3')
-depends=('libvirt-python' 'libvirt')
+depends=('libvirt-python' 'libvirt' 'pylibpcap')
 makedepends=('git')
 changelog=changelog
 source=()
